bugfix: support log4j2.properties
also, update ES version for Ubuntu and CentOS